[package]
name = "rustunl"
version = "0.1.0"
authors = ["Jared Steiner <steiner.jared1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
pritunl = { git = "https://github.com/jayman888/pritunl-rs" }
log = "0.4.14"
simplelog = "0.10.0"
tui = "0.15.0"
termion = "1.5"
rand = "0.8"
reqwest = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
directories = "3.0.2"